Add manifest validation stage to Jenkinsfile

--- a/template/ci/Jenkinsfile
+++ b/template/ci/Jenkinsfile
@@ -47,6 +47,21 @@ node('docker') {
                     lineCoverageTargets: '100.0, 90.0, 50.0',
                 ])
             }
+
+            stage("Validate Manifests") {
+                build job: env.GLOBAL_KUSTOMIZE_PROOFING_JOB,
+                    wait: true,
+                    propagate: true,
+                    parameters: [
+                        text(name: 'SERVICE_NAME', value: "{{Name}}"),
+                        text(name: 'SERVICE_GIT', value: "https://github.com/zenoss/{{Name}}"),
+                        text(name: 'SERVICE_GIT_SHA', value: env.GIT_BRANCH),
+                        text(name: 'UPSTREAM_JOB_NAME', value: env.JOB_NAME),
+                        text(name: 'UPSTREAM_JOB_NUMBER', value: env.BUILD_NUMBER),
+                        text(name: 'UPSTREAM_JOB_URL', value: env.BUILD_URL),
+                    ]
+            }
+
         } finally {
             stage ('Clean test environment') {
                 sh("${MAKE} down")
