add an example of public api and spinnaker annotation

--- a/template/manifests/base/deployment.yaml
+++ b/template/manifests/base/deployment.yaml
@@ -1,6 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    zenoss.spinnaker_deploy: "true"
+    # zenoss.zing.deploy.istio: "true" // Uncomment this if you're exposing a public API.
   labels:
     app: {{Name}}
     project: {{Name}}
