fix according to review

--- a/template/manifests/base/deployment.yaml
+++ b/template/manifests/base/deployment.yaml
@@ -16,6 +16,7 @@ spec:
     metadata:
       labels:
         app: {{Name}}
+        project: {{Name}}
     spec:
       affinity:
         podAntiAffinity:
