--- a/template/manifests/base/hpa.yaml
+++ b/template/manifests/base/hpa.yaml
@@ -2,6 +2,9 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{Name}}
+labels:
+  app: {{Name}}
+  project: {{Name}}
 spec:
   minReplicas: 1
   maxReplicas: 16
