--- a/template/manifests/base/pdb.yaml
+++ b/template/manifests/base/pdb.yaml
@@ -2,6 +2,9 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: {{Name}}
+labels:
+  app: {{Name}}
+  project: {{Name}}
 spec:
   minAvailable: 1
   selector:
