--- a/template/manifests/base/service.yaml
+++ b/template/manifests/base/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{Name}}
+labels:
+  app: {{Name}}
+  project: {{Name}}
 spec:
   ports:
   - port: 80
