ZING-20267: update template to latest standards (#73)
* update zenkit-build to 1.10
* add zcloud-sre directory
* remove per-stack kustomizations
* add project label
* add an example of public api and spinnaker annotation
* change kustomization.yaml according to changes

--- a/template/manifests/base/deployment.yaml
+++ b/template/manifests/base/deployment.yaml
@@ -1,8 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    zenoss.spinnaker_deploy: "true"
+    # zenoss.zing.deploy.istio: "true" // Uncomment this if you're exposing a public API.
   labels:
     app: {{Name}}
+    project: {{Name}}
   name: {{Name}}
 spec:
   selector:
@@ -12,6 +16,7 @@ spec:
     metadata:
       labels:
         app: {{Name}}
+        project: {{Name}}
     spec:
       affinity:
         podAntiAffinity:
