--- a/template/manifests/base/pdb.yaml
+++ b/template/manifests/base/pdb.yaml
@@ -6,7 +6,7 @@ labels:
   app: {{Name}}
   project: {{Name}}
 spec:
-  minAvailable: 1
+  minAvailable: 50%
   selector:
     matchLabels:
       app: {{Name}}
