ZING-22426: add revive linter config (#75)

--- a/template/Makefile
+++ b/template/Makefile
@@ -3,14 +3,15 @@ include .env
 
 SHELL                := /bin/bash
 ROOTDIR              ?= $(CURDIR)
+GOPATH               := $(shell go env GOPATH)
 GO                   := $(shell command -v go 2> /dev/null)
-GOFMT 				 := $(shell command -v gofmt 2> /dev/null)
+GOFUMPT 			 := $(shell command -v gofumpt 2> /dev/null)
 PACKAGE              := {{$pkg}}
 BIN                  := $(GOPATH)/bin
 BASE                 := $(GOPATH)/src/$(PACKAGE)
 DOCKER_COMPOSE       := /usr/local/bin/docker-compose
 LOCAL_USER_ID        := $(shell id -u)
-ZENKIT_BUILD_VERSION := 1.10.0
+ZENKIT_BUILD_VERSION := 1.13.0
 BUILD_IMG            := zenoss/zenkit-build:$(ZENKIT_BUILD_VERSION)
 COVERAGE_DIR         := coverage
 DOCKER_PARAMS        := --rm -v $(ROOTDIR):/go/src/$(PACKAGE):rw \
@@ -24,8 +25,6 @@ ifdef PROJECT_NAME
 DOCKER_COMPOSE_BASE  += -p $(PROJECT_NAME)
 endif
 
-V = 0
-Q = $(if $(filter 1,$V),,@)
 M = $(shell printf "\033[34;1m▶\033[0m")
 
 .PHONY: default
@@ -43,46 +42,44 @@ $(DOCKER_COMPOSE):
 $(BIN):
 	@mkdir -p $@
 $(BIN)/%: $(BIN) | $(BASE)
-	@[ -x $@ ] || echo "$(M)" Installing $* && go get $(REPOSITORY)
+	@[ -x $@ ] || echo "$(M)" Installing $* && go install $(REPOSITORY)
 
 GINKGO = $(BIN)/ginkgo
-$(BIN)/ginkgo: REPOSITORY=github.com/onsi/ginkgo/v2/ginkgo
+$(BIN)/ginkgo: REPOSITORY=github.com/onsi/ginkgo/v2/ginkgo@latest
 
-GOLINT = $(BIN)/golint
-$(BIN)/golint: REPOSITORY=golang.org/x/lint/golint
+GOSTATICCHECK = $(BIN)/staticcheck
+$(BIN)/staticcheck: REPOSITORY=honnef.co/go/tools/cmd/staticcheck@latest
+
+REVIVE = $(BIN)/revive
+$(BIN)/revive: REPOSITORY=github.com/mgechev/revive@latest
 
 GOCOV = $(BIN)/gocov
-$(BIN)/gocov: REPOSITORY=github.com/axw/gocov/...
+$(BIN)/gocov: REPOSITORY=github.com/axw/gocov/gocov@latest
 
 GOCOVXML = $(BIN)/gocov-xml
-$(BIN)/gocov-xml: REPOSITORY=github.com/AlekSi/gocov-xml
+$(BIN)/gocov-xml: REPOSITORY=github.com/AlekSi/gocov-xml@latest
 
-$(BASE):
-
-vendor: go.mod go.sum | $(BASE) ; $(info $(M) retrieving dependencies…)
-	$Q cd $(BASE) && $(GO) mod vendor
-	@touch $@
-
-.PHONY: vendor-update
-vendor-update: vendor | $(BASE)
-ifeq "$(origin PKG)" "command line"
-	$(info $(M) updating $(PKG) dependency…)
-	$Q cd $(BASE) && $(GO) get $(PKG) && $(GO) mod vendor
-else
-	$(info $(M) updating all dependencies…)
-	$Q cd $(BASE) && $(GO) get ./... && $(GO) mod vendor
-endif
-	@touch vendor
+.PHONY: vendor
+vendor:
+	@echo "$(M) retrieving dependencies…"
+	cd $(ROOTDIR) && $(GO) mod vendor
+	@echo "$(M) dependencies have been vendored"
 
 .PHONY: fmt
-fmt: ; $(info $(M) running gofmt…) @ ## Run gofmt on all source files
-	@ret=0 && for d in $$($(GO) list -f '{{`{{.Dir}}`}}' ./... | grep -v /vendor/); do \
-		$(GOFMT) -l -w $$d/*.go || ret=$$? ; \
-	 done ; exit $$ret
+fmt:
+	@echo "$(M) running gofumpt…"
+	exit $(shell $(GOFUMPT) -w -l $(ROOTDIR) | wc -l)
 
 .PHONY: lint
-lint: vendor | $(BASE) $(GOLINT) ; $(info $(M) running golint…) @ ## Run golint
-	$Q $(GOLINT) -set_exit_status $(PKGS)
+lint: 
+	@echo "$(M) running revive linter…"
+	$(REVIVE) \
+		-set_exit_status \
+		-config $(ROOTDIR)/.revive.toml \
+		-formatter=friendly \
+		-exclude $(ROOTDIR)/vendor/... \
+		$(ROOTDIR)/...
+	@echo "$(M) linted with revive linter"
 
 .PHONY: build
 build: export COMMIT_SHA ?= $(shell git rev-parse HEAD)
@@ -109,10 +106,11 @@ unit-test: COVERAGE_XML     := $(COVERAGE_DIR)/coverage.xml
 unit-test: fmt
 	@mkdir -p $(COVERAGE_DIR)
 	@$(GINKGO) \
+		run \
 		-r \
-		-mod vendor \
-		-cover \
-		-covermode=count \
+		--mod vendor \
+		--cover \
+		--covermode=count \
 		--skip-package vendor \
 		--junit-report=junit.xml
 	@$(GO) tool cover -html=$(COVERAGE_PROFILE) -o $(COVERAGE_HTML)
@@ -121,8 +119,8 @@ unit-test: fmt
 .PHONY: unit-test-containerized
 unit-test-containerized: export ZENKIT_BUILD_VERSION ?= $(ZENKIT_BUILD_VERSION)
 unit-test-containerized: $(DOCKER_COMPOSE)
-	@$(DOCKER_COMPOSE_BASE) -f docker-compose.test.yml run $(DOCKER_PARAMS) test make unit-test; \
-		$(DOCKER_COMPOSE_BASE) -f docker-compose.test.yml down
+	@$(DOCKER_COMPOSE_BASE) -f docker-compose.test.yml run $(DOCKER_PARAMS) test make unit-test
+	@$(DOCKER_COMPOSE_BASE) -f docker-compose.test.yml down
 
 .PHONY: clean
 clean:: down
