--- a/template/ci/Jenkinsfile
+++ b/template/ci/Jenkinsfile
@@ -3,12 +3,20 @@
 MAKE='make -f ci/Makefile'
 
 node('docker') {
+    jdk = tool name: 'jdk11'
+    env.JAVA_HOME = "${jdk}"
 
     currentBuild.displayName = "PR #${env.ghprbPullId}@${env.NODE_NAME}"
     configFileProvider([
         configFile(fileId: 'global', variable: 'GLOBAL'),
+        configFile(fileId: 'sonarqube-ssl', variable: 'SONARQUBE_CERT'),
     ]) {
         global = load env.GLOBAL
+        sh '''
+            if [ ! -e ${HOME}/sonarcacert.ks ];then
+                keytool -import -file ${SONARQUBE_CERT} -keystore ${HOME}/sonarcacert.ks -storepass changeit -noprompt
+            fi
+        '''
     }
 
     stage('Checkout') {
@@ -19,11 +27,25 @@ node('docker') {
         "COMMIT_SHA=${env.ghprbActualCommit}",
         "IMAGE_TAG=${env.ghprbActualCommit.substring(0,8)}",
         "PROJECT_NAME={{Name}}-${env.BUILD_NUMBER}",
-        "ROOTDIR=${global.HOST_WORKSPACE}"]) {
+        "ROOTDIR=${global.HOST_WORKSPACE}",
+        "SONAR_SCANNER_OPTS=-Djavax.net.ssl.trustStore=${HOME}/sonarcacert.ks -Djavax.net.ssl.trustStorePassword=changeit",
+        ]) {
         try {
             stage('Unit tests') {
                 ansiColor('xterm') {
                     sh("${MAKE} unit-test-containerized")
+                }
+            }
+
+            stage('SonarQube PR analysis') {
+                def scannerHome = tool 'SonarScanner';
+                def propertiesPath = "-Dproject.settings=./ci/sonar-project.properties"
+                def pullId = "-Dsonar.pullrequest.key=${env.ghprbPullId}"
+                def sourcheBranch = "-Dsonar.pullrequest.branch=${env.ghprbSourceBranch}"
+                def targetBranch = "-Dsonar.pullrequest.base=${env.ghprbTargetBranch}"
+                def skipFail = "-Dsonar.buildbreaker.skip=true"
+                withSonarQubeEnv() {
+                    sh "${scannerHome}/bin/sonar-scanner ${propertiesPath} ${pullId} ${sourcheBranch} ${targetBranch} ${skipFail}"
                 }
             }
 
