--- a/template/ci/Jenkinsfile
+++ b/template/ci/Jenkinsfile
@@ -39,13 +39,16 @@ node('docker') {
 
             stage('SonarQube PR analysis') {
                 def scannerHome = tool 'SonarScanner';
-                def propertiesPath = "-Dproject.settings=./ci/sonar-project.properties"
-                def pullId = "-Dsonar.pullrequest.key=${env.ghprbPullId}"
-                def sourcheBranch = "-Dsonar.pullrequest.branch=${env.ghprbSourceBranch}"
-                def targetBranch = "-Dsonar.pullrequest.base=${env.ghprbTargetBranch}"
-                def skipFail = "-Dsonar.buildbreaker.skip=true"
-                withSonarQubeEnv() {
-                    sh "${scannerHome}/bin/sonar-scanner ${propertiesPath} ${pullId} ${sourcheBranch} ${targetBranch} ${skipFail}"
+                def args = [
+                    "${scannerHome}/bin/sonar-scanner",
+                    "-Dproject.settings=./ci/sonar-project.properties",
+                    "-Dsonar.pullrequest.key=${env.ghprbPullId}",
+                    "-Dsonar.pullrequest.branch=${env.ghprbSourceBranch}",
+                    "-Dsonar.pullrequest.base=${env.ghprbTargetBranch}",
+                    "-Dsonar.buildbreaker.skip=true",
+                ]
+                withSonarQubeEnv("sonarqube.zenoss.io") {
+                    sh args.join(" ")
                 }
             }
 
