--- a/template/ci/sonar-project.properties
+++ b/template/ci/sonar-project.properties
@@ -1,3 +1,9 @@
 sonar.projectKey=zenoss_{{Name}}
+sonar.projectName={{Name}}
+
 sonar.go.coverage.reportPaths=coverprofile.out
+sonar.sourceEncoding=UTF-8
+
+sonar.test.inclusions=**/*_test.go
+sonar.exclusions=vendor/**,**/mocks/**
 sonar.coverage.exclusions=main.go
