--- a/template/manifests/base/virtualservice.yaml
+++ b/template/manifests/base/virtualservice.yaml
@@ -3,7 +3,7 @@
 # apiVersion: networking.istio.io/v1alpha3
 # kind: VirtualService
 # metadata:
-#   name: {{Name}}-vs
+#   name: {{Name}}
 # labels:
 #   app: {{Name}}
 #   project: {{Name}}
