--- a/template/manifests/base/hpa.yaml
+++ b/template/manifests/base/hpa.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{Name}}
@@ -12,7 +12,9 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 300
+      target:
+        type: Utilization
+        averageUtilization: 300
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
