--- a/template/ci/sonar-project.properties
+++ b/template/ci/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=zenoss_{{Name}}
 sonar.projectName={{Name}}
 
+sonar.sarifReportPaths=vuln.sarif
 sonar.go.coverage.reportPaths=coverprofile.out
 sonar.sourceEncoding=UTF-8
 
